# selectel-test-backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  uvtree.txt
app/: main.py
app/api/v1/: vacancies.py
app/core/: config.py
app/crud/: vacancy.py
app/schemas/: external.py  vacancy.py
app/services/: parser.py
Отчет/: Отчет по отладке Александр Андреев.md
